--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   flutter_map: ^0.12.0
   latlong:
   animated_splash_screen: ^1.2.0
-
+  cupertino_radio_choice: ^1.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
