--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,12 +16,18 @@ dependencies:
   get_it: ^4.0.2
   splashscreen: ^1.3.5
   http: ^0.13.4
-  intl: ^0.16.1
+  intl: ^0.17.0
   share_plus: ^3.0.4
   flutter_map: ^0.12.0
   latlong:
   animated_splash_screen: ^1.2.0
   cupertino_radio_choice: ^1.0.2
+  font_awesome_flutter: ^10.1.0
+  crypto: ^3.0.2
+  dio: ^4.0.6
+  shared_preferences: ^2.0.15
+  alert: ^2.0.1
+  toast: ^0.3.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
